BAP-1258: Fixed horizontal scroll and login form pixel

--- a/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -1475,7 +1475,7 @@ footer {
     position: relative;
     width: 30px;
     height: 24px;
-    margin: 0 -30px 0 0;
+    margin: 0 -29px 0 0;
     border-left: 1px solid #000004;
     cursor: pointer;  
     > span {
@@ -4973,7 +4973,7 @@ iframe.email-body {
   fieldset {
     border: solid @navbarBorder;
     border-width: 0 1px 1px 1px;
-    padding: 30px 39px;
+    padding: 30px 38px;
     background: #fff;
     .border-radius(0 0 5px 5px);
   }
